# TailFlow

./: .gitignore  AGENTS.MD  DECISIONS.md  LICENSE  Makefile  README.md  ROADMAP.md  TESTING.md  pyrightconfig.json
.ai/: memory.md  rule.md
.githooks/: pre-push
.github/: ui-contract.md
.project/: dev-loop.md  roadmap.md  tasks.md
assets/: checksums.json  e621-tags-list.csv  readme.md
backend/: .env.example  alembic.ini  pyproject.toml  tailflow_dev.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_project_dataset_schema.py  0003_enforce_dataset_image_tag_project_consistency.py  0004_shared_tag_schema_and_project_tagging_mode.py  0005_shared_image_tag_assignments.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: classify.py  images.py  projects.py  tags.py
backend/app/core/: config.py  enums.py  logging.py
backend/app/models/: dataset_image.py  image.py  project.py  tag.py
backend/app/schemas/: __init__.py  image.py  project.py  tag.py
backend/app/services/: __init__.py  classifier.py  projects.py  tag_import.py  tagging.py
backend/tests/: conftest.py  test_config.py  test_images.py  test_logging.py  test_projects.py  test_tag_import.py  test_tag_import_resilience.py  test_tags.py
docs/: project-dataset-workflow.md  tag-import-plan.md
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.browser.config.mjs  vitest.config.ts
scripts/: dev.ps1  import_tags.py  install_setup.py  validate_assets_checksums.py
(+99 files in other folders)
